working on step 2 of day 2

--- a/views/index.erb
+++ b/views/index.erb
@@ -56,12 +56,19 @@
 
           <dl>
             <dt># of Drinks</dt>
-            <dd id="drinks">0</dd>
+            <dd id="drinks" align="right">0</dd>
 
             <dt>Cost</dt>
-            <dd id="cost">$0.00</dd>
+            <dd id="cost" align="right">$0.00</dd>
+
+            <br/>
+
+            <dt></dt>
+            <dd id="submit" align="right"><button type="button"?>Checkout</button></dd>
+
           </dl>
         </form>
+        <div id="checkout_message"></div>
       </div>
 
 
