completed step 8 of day 2

--- a/views/index.erb
+++ b/views/index.erb
@@ -35,7 +35,7 @@
             <select name="drink[]" width="250" style="width: 250px;">
               <option>Please select a drink</option>
               <optgroup label="Coffee">
-                <option data-price="200" value="house">House Coffee — $2.00</option>
+                <option data-price="200" value="house">House Coffee — $2.00 </option>
                 <option data-price="200" value="iced">Iced Coffee — $2.00</option>
                 <option data-price="200" value="bold">Bold Coffee — $2.00</option>
               </optgroup>
@@ -68,11 +68,18 @@
 
           </dl>
         </form>
-        <div id="checkout_message"></div>
+        <div id="checkout_message">
+        </div>
+        
       </div>
 
-
+      <div class = "panel">
+        <div id="drink_image"><img src=""/>
+        </div>
+      </div>
+      
       <div class="panel">
+
        <!--  <h2>Where We're At</h2>
         <iframe
           width="100%"
